CMake: skip modules with no sources
Do not try to add any modules to build which have no sources (empty folders or otherwise no source files)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ foreach(dir ${modules_list})
     get_filename_component(module_name ${dir} NAME)
     file(GLOB sources_module ${dir}/*.c ${dir}/*.h)
 
-    if( ELUNA_MODULES and sources_module )
+    if( ELUNA_MODULES AND sources_module )
       add_library(${module_name} MODULE
         ${sources_module})
       target_include_directories(${module_name}
