--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,46 @@ jobs:
         ./authserver --version
         ./worldserver --version
 
+  CataPres-Eluna:
+    strategy:
+      fail-fast: false
+      matrix:
+        eluna: [ON]
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: false
+        repository: Niam5/ElunaCataPreservation
+    - uses: actions/checkout@v3
+      with:
+        path: src/server/game/LuaEngine
+    - name: Dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -yq libboost-all-dev
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 --slave /usr/bin/g++ g++ /usr/bin/g++-10
+    - name: Setup
+      env:
+        ELUNA: ${{ matrix.eluna }}
+      run: |
+        mkdir bin
+        cd bin
+        cmake ../ -DELUNA=$ELUNA -DUSE_COREPCH=1 -DUSE_SCRIPTPCH=1 -DTOOLS=1 -DSERVERS=1 -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_FLAGS_DEBUG="-DNDEBUG" -DCMAKE_CXX_FLAGS_DEBUG="-DNDEBUG" -DCMAKE_INSTALL_PREFIX=check_install -DBUILD_TESTING=1
+        cd ..
+    - name: Build
+      run: |
+        cd bin
+        make -j 4 -k && make install
+    - name: Unit tests
+      run: |
+        cd bin
+        make test
+    - name: Check executables
+      run: |
+        cd bin/check_install/bin
+        ./bnetserver --version
+        ./worldserver --version
+
 #  AC-Eluna:
 #    strategy:
 #      fail-fast: false
