--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         submodules: false
         repository: ElunaLuaEngine/ElunaTrinityWotlk
+        ref: multistate
     - uses: actions/checkout@v3
       with:
         path: src/server/game/LuaEngine
