--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,51 @@ jobs:
         ./authserver --version
         ./worldserver --version
 
+  TC-Retail-Eluna:
+    strategy:
+      fail-fast: false
+      matrix:
+        include: 
+          - eluna: OFF
+            lua: lua52
+          - eluna: ON
+            lua: lua52
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: false
+        repository: Eluna-Ports/ElunaTrinityCore
+    - uses: actions/checkout@v4
+      with:
+        path: src/server/game/LuaEngine
+    - name: Dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -yq libboost-all-dev g++-11
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11
+    - name: Setup
+      env:
+        ELUNA: ${{ matrix.eluna }}
+        LUA: ${{ matrix.lua }}
+      run: |
+        mkdir bin
+        cd bin
+        cmake ../ -DELUNA=$ELUNA -DLUA_VERSION=$LUA -DWITH_WARNINGS=1 -DWITH_COREDEBUG=0 -DUSE_COREPCH=1 -DUSE_SCRIPTPCH=1 -DTOOLS=1 -DSCRIPTS=dynamic -DSERVERS=1 -DNOJEM=0 -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_FLAGS="-Werror" -DCMAKE_CXX_FLAGS="-Werror" -DCMAKE_C_FLAGS_DEBUG="-DNDEBUG" -DCMAKE_CXX_FLAGS_DEBUG="-DNDEBUG" -DCMAKE_INSTALL_PREFIX=check_install -DBUILD_TESTING=1
+        cd ..
+    - name: Build
+      run: |
+        cd bin
+        make -j 4 -k && make install
+    - name: Unit tests
+      run: |
+        cd bin
+        make test
+    - name: Check executables
+      run: |
+        cd bin/check_install/bin
+        ./bnetserver --version
+        ./worldserver --version
+
 # Cata preservation project has been abandoned, so no need for further build checks on this project
 #  CataPres-Eluna:
 #    strategy:
