Disable Mangos build checks
Dependency submodule needs to be fixed on Mangos cores before multistate can be ported.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,35 +141,36 @@ jobs:
 #      - name: Check startup errors
 #        run: source ./apps/ci/ci-error-check.sh
 
-  mangos-Eluna:
-    strategy:
-      fail-fast: false
-      matrix:
-        eluna: [ON, OFF]
-        patch: [zero, one, two]
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
-          repository: mangos${{ matrix.patch }}/server
-          ref: master
-      - uses: actions/checkout@v3
-        with:
-          path: src/modules/Eluna
-      - name: Configure
-        env:
-          ELUNA: ${{ matrix.eluna }}
-        run: |
-          mkdir bin
-          cd bin
-          cmake .. -DSCRIPT_LIB_ELUNA=$ELUNA -DCMAKE_INSTALL_PREFIX=install -DSOAP=1 -DPLAYERBOTS=0 -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl/
-          cd ..
-      - name: Build
-        run: |
-          cd bin
-          make -j4
-          make install
+# Disable Mangos builds for now until Mangos deps are fixed and multistate can be ported
+#  mangos-Eluna:
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        eluna: [ON, OFF]
+#        patch: [zero, one, two]
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          submodules: recursive
+#          repository: mangos${{ matrix.patch }}/server
+#          ref: master
+#      - uses: actions/checkout@v3
+#        with:
+#          path: src/modules/Eluna
+#      - name: Configure
+#        env:
+#         ELUNA: ${{ matrix.eluna }}
+#        run: |
+#          mkdir bin
+#          cd bin
+#          cmake .. -DSCRIPT_LIB_ELUNA=$ELUNA -DCMAKE_INSTALL_PREFIX=install -DSOAP=1 -DPLAYERBOTS=0 -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl/
+#          cd ..
+#      - name: Build
+#        run: |
+#          cd bin
+#          make -j4
+#          make install
           
   cmangos-Eluna:
     strategy:
