--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        eluna: [ON]
+        eluna: [ON, OFF]
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
