--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,7 +160,7 @@ jobs:
       fail-fast: false
       matrix:
         eluna: [ON, OFF]
-        patch: [zero, one]
+        patch: [zero, one, two]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
